# TrOCR-ka

./: .gitignore  README.md  pyproject.toml  trocr-ka.ipynb
api/: pyproject.toml
dataset_gen/: README.md  pyproject.toml
dataset_gen/generator/: gen.py
dataset_gen/generator/dictionaries/: ka_dictionary_builder.py  ka_dictionary_from_docs.py
ml_training/: pyproject.toml  trocr-fine-tuning.ipynb
ml_training/src/ml_training/: __init__.py  dataset.py  main.py
