[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Irakliskhirtladze", email = "irskhirtladze@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
api = "api:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
