[project]
name = "ml-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook>=7.5.2",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "torch>=2.9.1",
    "huggingface-hub==0.34.6",
    "transformers>=4.48.0",
    "hf-xet>=1.2.0",
]
