[project]
name = "ml-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook>=7.5.2",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "torch>=2.9.1",
    "huggingface-hub==0.34.6",
    "transformers>=4.48.0",
    "hf-xet>=1.2.0",
    "pip>=25.3",
    "scikit-learn>=1.8.0",
    "evaluate>=0.4.6",
    "datasets>=3.6.0",
    "pyarrow>=19.0.0",
    "jiwer>=3.1.0",
    "matplotlib>=3.10.8",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_training"]

[project.scripts]
train = "ml_training.main:main"
